updates to multiple components

--- a/src/app/reusable-component/family-member-table/family-member-table.component.scss
+++ b/src/app/reusable-component/family-member-table/family-member-table.component.scss
@@ -1,7 +1,8 @@
-table{
-    width: 100%;
-    margin: auto;
-    th{
-        font-size: large;
-    }
+table {
+  width: 100%;
+  margin: auto;
+  th {
+    font-size: large;
+    padding: 15px;
+  }
 }
