--- a/src/app/reusable-component/header/header.component.scss
+++ b/src/app/reusable-component/header/header.component.scss
@@ -1,13 +1,12 @@
-.header{
-    color: white;
-    background-color: #2596BE;
+.header {
+  color: white;
+  background-color: #2596be;
 
-    h1{
-        font-size: xxx-large;
-    }
-
+  h1 {
+    font-size: xxx-large;
+  }
 }
 
-img{
-    height: 90px;
+img {
+  height: 90px;
 }
