--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,63 @@
-  <div class="header">
-    <app-header></app-header>
+<header>
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <a class="navbar-brand" href="#">
+      <img src="../assets/sacred-heart-clipart-1.jpeg" />
+      Sacred Heart Parish
+    </a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarCollapse"
+      aria-controls="navbarCollapse"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <ul class="navbar-nav mr-auto">
+        <!-- <li class="nav-item active">
+          <a class="nav-link" href="#"
+            >Home <span class="sr-only">(current)</span></a
+          >
+        </li> -->
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/search-old" routerLinkActive="active"
+            >Old Directory</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/search" routerLinkActive="active"
+            >New Directory</a
+          >
+        </li>
+      </ul>
+      <!-- <form class="form-inline mt-2 mt-md-0">
+        <input
+          class="form-control mr-sm-2"
+          type="text"
+          placeholder="Search"
+          aria-label="Search"
+        />
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+          Search
+        </button>
+      </form> -->
+    </div>
+  </nav>
+</header>
+
+<!-- Begin page content -->
+<main role="main" class="container">
+  <router-outlet></router-outlet>
+</main>
+
+<footer class="footer">
+  <div class="container text-center bg-success">
+    <span class="font-weight-bold"
+      >This software is an intellectual property of Sacred Heart Parish. All
+      rights reserved.</span
+    >
   </div>
-  <div class="content">
-    <router-outlet></router-outlet>
-  </div>
-  <div class="footer">
-    <app-footer></app-footer>
-  </div>
+</footer>
