--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,17 +1,15 @@
-.header{
-    height: 12%;
-}
-.content{
-    border: 20px solid #2596BE;
-    padding: 20px;
-    height: 78%;
-    overflow: auto;
+main.container {
+  padding: 150px 25px 0px 25px;
+  margin: auto;
+  max-width: 100%;
+  height: 850px;
 }
 
-.footer{
-  bottom: 0;
-  height: 10%;
-  border: 20px solid #2596BE;
-  border-top: none;
+img {
+  height: 50px;
+  margin: 10px;
 }
 
+footer > div {
+  max-width: 100%;
+}
