--- a/src/app/pages/search-old-member/search-old-member.component.scss
+++ b/src/app/pages/search-old-member/search-old-member.component.scss
@@ -1,30 +1,32 @@
-:host{
-    height: 100%;
+:host {
+  height: 100%;
+  display: block;
 }
 
-label{
-    font-weight: bold;
-    font-size: large;
-} 
-
-.search-form{
-    height: 20%;
-    margin-bottom: 30px;;
+label {
+  font-weight: bold;
+  font-size: large;
 }
 
-.search-table{
+.search-form {
+  height: 20%;
+  margin-bottom: 30px;
+}
+
+.search-table {
   height: 550px;
   overflow: scroll;
-    mat-table{
-        width: 100%;
-        margin: auto;
-        mat-header-cell{
-          font-size: initial;
-          color: white;
-        }
+  mat-table {
+    width: 100%;
+    margin: auto;
+    mat-header-cell {
+      font-size: initial;
+      color: white;
     }
-    mat-header-cell, mat-cell {
-      justify-content: center;
+  }
+  mat-header-cell,
+  mat-cell {
+    justify-content: center;
   }
 
   .mat-column-sno {
@@ -58,4 +60,3 @@ label{
     width: 2%;
   }
 }
-
