--- a/src/app/reusable-component/add-family-head-dialogue/add-family-head-dialogue.component.html
+++ b/src/app/reusable-component/add-family-head-dialogue/add-family-head-dialogue.component.html
@@ -1,98 +1,190 @@
 <h1 mat-dialog-title>Add Head of the Family</h1>
 <div mat-dialog-content>
-    <div *ngIf="apiMessage.length == 0" class="wrapper">
-        <form [formGroup]="familyHeadForm">
-            <div class="row">
-                <div class="col">
-                    <label for="familyName" class="form-label">Family Name</label>
-                    <input type="text" class="form-control" 
-                    formControlName="familyName" placeholder="Enter Family Name">
-                </div>
-                <div class="col">
-                    <label for="registeredBy" class="form-label">Registering Authority</label>
-                    <input type="text" class="form-control" formControlName="officeRepresentative" placeholder="Enter Registering Authority">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <label for="phoneNumber" class="form-label">Contact No</label>
-                    <input type="text" class="form-control" formControlName="phoneNumber" placeholder="Enter phone number">
-                </div>
-                <div class="col">
-                    <label for="email" class="form-label">Email Id</label>
-                    <input type="email" class="form-control" formControlName="emailId" placeholder="Enter email id">
-                </div>
-            </div>
-             <div class="row">
-                <div class="col">
-                    <label for="memberRemark" class="form-label">Remarks for member</label>
-                    <input type="text" class="form-control" formControlName="memberRemark" placeholder="Enter remarks">
-                </div>
-                <div class="col">
-                    <label for="registrationRemark" class="form-label">Remarks for Registration</label>
-                    <input type="text" class="form-control" formControlName="registrationRemark" placeholder="Enter remarks">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <label for="dateOfRegistration" class="form-label">Date of Registration</label>
-                    <input type="date" class="form-control" formControlName="dateOfRegistration">
-                </div>
-                <div class="col">
-                    <label for="parishPriest" class="form-label">ParishPriestName</label>
-                    <input type="text" class="form-control" formControlName="registeredByPriest" placeholder="Enter name">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-6">
-                    <label for="area" class="form-label">Select Area</label>
-                    <select name="area" class="form-select" formControlName="area" placeholder="Select area">
-                        <option *ngFor="let area of areaOptions" [ngValue]="area">{{area.name}}</option>
-                      </select>
-                </div>
-            </div>
-    
-        </form>
-        <div class="secondary-details" [formGroup]="familyHeadForm">
-            <div class="row">
-                <div class="col">
-                    <label for="leader" class="form-label">Area Leader</label>
-                    <input type="text" class="form-control" 
-                    formControlName="leader" readonly>
-                </div>
-                <div class="col">
-                    <label for="spouse" class="form-label">Spouse</label>
-                    <input type="text" class="form-control" formControlName="spouse" readonly>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <label for="children" class="form-label">Children</label>
-                    <input type="text" class="form-control" formControlName="children" readonly>
-                </div>
-                <div class="col">
-                    <label for="childrenEducation" class="form-label">Children Education</label>
-                    <input type="text" class="form-control" formControlName="education" readonly>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <label for="address" class="form-label">Address</label>
-                    <input type="text" class="form-control" formControlName="address" readonly>
-                </div>
-            </div>
+  <div *ngIf="apiMessage.length == 0" class="wrapper">
+    <form [formGroup]="familyHeadForm">
+      <div class="row">
+        <div class="col">
+          <label for="familyName" class="form-label">Family Name</label>
+          <input
+            type="text"
+            class="form-control"
+            formControlName="familyName"
+            placeholder="Enter Family Name"
+          />
         </div>
+        <div class="col">
+          <label for="registeredBy" class="form-label"
+            >Registering Authority</label
+          >
+          <input
+            type="text"
+            class="form-control"
+            formControlName="officeRepresentative"
+            placeholder="Enter Registering Authority"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <label for="phoneNumber" class="form-label">Contact No</label>
+          <input
+            type="text"
+            class="form-control"
+            formControlName="phoneNumber"
+            placeholder="Enter phone number"
+          />
+        </div>
+        <div class="col">
+          <label for="email" class="form-label">Email Id</label>
+          <input
+            type="email"
+            class="form-control"
+            formControlName="emailId"
+            placeholder="Enter email id"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <label for="memberRemark" class="form-label"
+            >Remarks for member</label
+          >
+          <input
+            type="text"
+            class="form-control"
+            formControlName="memberRemark"
+            placeholder="Enter remarks"
+          />
+        </div>
+        <div class="col">
+          <label for="registrationRemark" class="form-label"
+            >Remarks for Registration</label
+          >
+          <input
+            type="text"
+            class="form-control"
+            formControlName="registrationRemark"
+            placeholder="Enter remarks"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <label for="dateOfRegistration" class="form-label"
+            >Date of Registration</label
+          >
+          <input
+            type="date"
+            class="form-control"
+            formControlName="dateOfRegistration"
+          />
+        </div>
+        <div class="col">
+          <label for="parishPriest" class="form-label">ParishPriestName</label>
+          <input
+            type="text"
+            class="form-control"
+            formControlName="registeredByPriest"
+            placeholder="Enter name"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-6">
+          <label for="area" class="form-label">Select Area</label>
+          <select
+            name="area"
+            class="form-select form-control"
+            formControlName="area"
+            placeholder="Select area"
+            (change)="log()"
+          >
+            <option *ngFor="let area of areaOptions" [ngValue]="area">
+              {{ area.name }}
+            </option>
+          </select>
+        </div>
+      </div>
+    </form>
+    <div class="secondary-details" [formGroup]="additionalDetailsForm">
+      <h1>Previous Data</h1>
+      <div class="row">
+        <div class="col">
+          <label for="leader" class="form-label">Area Leader</label>
+          <input
+            type="text"
+            class="form-control"
+            formControlName="leader"
+            readonly
+          />
+        </div>
+        <div class="col">
+          <label for="spouse" class="form-label">Spouse</label>
+          <input
+            type="text"
+            class="form-control"
+            formControlName="spouse"
+            readonly
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <label for="children" class="form-label">Children</label>
+          <input
+            type="text"
+            class="form-control"
+            formControlName="children"
+            readonly
+          />
+        </div>
+        <div class="col">
+          <label for="childrenEducation" class="form-label"
+            >Children Education</label
+          >
+          <input
+            type="text"
+            class="form-control"
+            formControlName="education"
+            readonly
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <label for="address" class="form-label">Address</label>
+          <input
+            type="text"
+            class="form-control"
+            formControlName="address"
+            readonly
+          />
+        </div>
+      </div>
     </div>
-    <div *ngIf="apiMessage.length > 0" class="apiMessage">
-        <h6>
-            {{apiMessage}}
-        </h6>
-    </div>
+  </div>
+  <div *ngIf="apiMessage.length > 0" class="apiMessage">
+    <h6>
+      {{ apiMessage }}
+    </h6>
+  </div>
 </div>
 <div mat-dialog-actions class="float-end" *ngIf="apiMessage.length == 0">
-  <button mat-button  class="btn btn-primary" style="margin-right: 20px;" 
-  cdkFocusInitial (click)="registerUser()">Add Member</button>
-  <button mat-button class="btn btn-primary" (click)="cancel()">Cancel</button>
+  <button
+    [disabled]="!familyHeadForm.valid"
+    mat-button
+    class="btn btn-dark btn-outline-success"
+    style="margin-right: 20px"
+    cdkFocusInitial
+    (click)="registerUser()"
+  >
+    Add Member
+  </button>
+  <button
+    mat-button
+    class="btn btn-dark btn-outline-success"
+    (click)="cancel()"
+  >
+    Cancel
+  </button>
 </div>
-
-
