--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,46 @@
 /* You can add global styles to this file, and also import other style files */
 
 /* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
+@import "~bootstrap/dist/css/bootstrap.css";
 
-
-html, body { 
-    margin: 0; 
-    padding: 0; 
-    width: 100%; 
-    height: 100%;
+html,
+body,
+app-root {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
 }
 
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+// body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.border-3 {
+  border: solid;
+  border-width: 5px !important;
+}
+
+.border-4 {
+  border: solid;
+  border-width: 10px !important;
+}
+
+.border-bottom-3 {
+  border-bottom: solid;
+  border-width: 5px !important;
+}
+
+app-member-profile {
+  button {
+    color: #0cd3ed !important;
+    border-color: #0cd3ed !important;
+  }
+  input {
+    font-size: large !important;
+  }
+
+  label {
+    font-weight: bold !important;
+    //font-size: large !important;
+  }
+}
